fix: banner display below 500px
fix: make form/overlay appear above HeaderNav

fix: make error messages appear when submission of invalid data is attempted

fix: reset textarea inputs on closing modal

fix: improve error handling and display on form

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -33,6 +33,9 @@
 @media screen and (max-width: 500px) {
   .banner {
     padding: 50px 0 60px;
+  }
+
+  .banner__content {
     flex-direction: column;
     align-items: center;
   }
